--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Вперед</title>
         <meta charset="utf-8">
         <script src="script/index.js"></script>
+        <link rel="stylesheet" href="style/index.css">
     </head>
     <body>
         <h2>Задачи и влияние</h2>
@@ -14,12 +15,18 @@
         <table>
             <thead>
                 <tr>
-                    <th>Задача</th>
-                    <th>Влияние</th>
+                    <th id="task_h" class="left_col">Задача</th>
+                    <th id="infl_h" class="left_col">Влияние</th>
+                    <th id="comm_h" >Комментарий</th>
                 </tr>
             </thead>
             <tbody>
             </tbody>
         </table>
+        
+        <div id="task_circle">
+            <div id="influsion_circle">
+            </div>
+        </div>
     </body>
 </html>
