--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             </tbody>
         </table>
         
-        <div id="task_circle">
-            <div id="influsion_circle">
+        <div id="non_influsion_circle" class="influsion_circle">
+            <div id="half_influsion_circle" class="influsion_circle">
+                <div id="full_influsion_circle" class="influsion_circle">
+                </div>
             </div>
         </div>
     </body>
